compiler-core/src/type_/tests/snapshots/gleam_core__type___tests__errors__mismatched_list_tail.snap
---
source: compiler-core/src/type_/tests/errors.rs
expression: "[\"wibble\", ..[1, 2]]"
---
----- SOURCE CODE
["wibble", ..[1, 2]]

----- ERROR
error: Type mismatch
  ┌─ /src/one/two.gleam:1:14
  │
1 │ ["wibble", ..[1, 2]]
  │              ^^^^^^

All elements in a list must have the same type, but the elements of
this list don't match the type of the elements being prepended to it.

Expected type:

    List(String)

Found type:

    List(Int)
